Checkpoint: consolidate pending Salsa hardening and runtime/UI updates

--- a/crates/trust-runtime/src/web/ui/index.html
+++ b/crates/trust-runtime/src/web/ui/index.html
@@ -175,7 +175,7 @@
                   <label class="muted">Additional drivers <span class="help" title="Optional extra drivers composed with the primary driver (for example: modbus-tcp + mqtt)." aria-label="Additional drivers help">?</span></label>
                   <div id="ioAdditionalDrivers" class="table"></div>
                   <button class="btn ghost" onclick="addAdditionalIoDriver()">+ Add driver</button>
-                  <div class="note">Primary driver above plus additional drivers are executed in listed order each cycle.</div>
+                  <div class="note">Primary driver above plus additional drivers are executed in listed order each cycle. Common drivers use guided fields; custom drivers use JSON.</div>
                 </div>
                 <div class="field">
                   <label class="muted">Use system I/O config <span class="help" title="Use /etc/trust/io.toml instead of project io.toml." aria-label="Use system I/O help">?</span></label>
